Complete translation words all

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -135,8 +135,6 @@
     "Moved Permanently": "영구 이사",
     "Multi-Status": "다중 상태",
     "Multiple Choices": "객관식",
-    "Name": "이름",
-    "name": "이름",
     "Network Authentication Required": "네트워크 인증 필요",
     "Network Connect Timeout Error": "네트워크 연결 시간 초과 오류",
     "Network Read Timeout Error": "네트워크 읽기 시간 초과 오류",
@@ -166,7 +164,6 @@
     "Pagination Navigation": "페이지네이션 내비게이션",
     "Partial Content": "부분 콘텐츠",
     "Password": "비밀번호",
-    "password": "비밀번호가 잘못되었습니다.",
     "Payload Too Large": "페이로드가 너무 큼",
     "Payment Required": "결제 필요",
     "Permanent Redirect": "영구 리디렉션",
@@ -175,7 +172,6 @@
     "Precondition Failed": "전제 조건 실패",
     "Precondition Required": "전제 조건 필요",
     "Preview": "프리뷰",
-    "Price": "가격",
     "Processing": "처리",
     "Profile": "프로필",
     "Profile Information": "프로필 정보",
@@ -262,7 +258,6 @@
     "Variant Also Negotiates": "변형도 협상",
     "Verify Email Address": "이메일 주소 확인",
     "Verify Your Email Address": "이메일 주소 확인",
-    "View": "뷰",
     "View :name": "보기 :name",
     "Web Server is Down": "웹 서버가 다운되었습니다",
     "Whoops!": "저런!",
@@ -270,5 +265,409 @@
     "You are logged in!": "로그인되었습니다!",
     "You are receiving this email because we received a password reset request for your account.": "귀하의 계정에 대한 비밀번호 재설정이 요청되어 이 메일이 발송되었습니다.",
     "You're logged in!": "로그인되었습니다!",
-    "Your email address is unverified.": "이메일 주소가 확인되지 않았습니다."
+    "Your email address is unverified.": "이메일 주소가 확인되지 않았습니다.",
+    "Next": "다음",
+    "Previous": "이전",
+    "Create At": "생성일",
+    "Updated At": "업데이트일",
+    "View": "보기",
+    "Id": "아이디",
+    "Donation Title": "기부 제목",
+    "Start Date": "시작 시각",
+    "End Date": "마감 시각",
+    "Add Go User": "고 유저 만들기",
+    "Inventory": "재고 수량",
+    "SupplierGood Inventory": "공급사 재고 수량",
+    "Fixed Price": "원가",
+    "FixedPrice": "원가",
+    "Cost Price": "매입가",
+    "CostPrice": "매입가",
+    "TotalPrice": "판매가",
+    "Last Cost Price": "최근 매입가",
+    "Goods Price": "판매가",
+    "Name": "이름",
+    "Barcode": "바코드",
+    "Is Playauto Done": "플레이오토 처리 됨",
+    "Is Shutdowned": "판매중지 여부",
+    "Is Requested Shutdown": "판매중지 요청",
+    "New Ct Good": "상품 등록",
+    "List Ct Goods": "상품 리스트",
+    "Add Ct Good": "상품 등록하기",
+    "Goods": "상품 리스트",
+    "Barcode Test": "바코드 테스트",
+    "Picking Box Number": "피킹박스 번호",
+    "Storage Box Zone": "스토리지 박스존",
+    "Goods Division Color": "상품 구분색",
+    "Code": "코드",
+    "Playauto Master Code": "P코드",
+    "Center Code": "센터 코드",
+    "Supplier Request Price": "공급사 요청 판매가격",
+    "Supplier Name": "공급사 이름",
+    "Good": "상품",
+    "Category": "카테고리",
+    "Maker": "제조사",
+    "Supplier": "공급사",
+    "Generated Barcode": "생성 바코드",
+    "Ship Quantity": "배송 수량(주문 단위)",
+    "Created At": "생성일",
+    "Modified": "수정일",
+    "Godo Code": "올라펫샵 상품코드",
+    "Retail Code": "리테일 코드",
+    "Godo Name": "자사몰 상품명",
+    "Spec": "스펙",
+    "Order Rule": "주문 규칙",
+    "Safe Inventory": "안전 재고",
+    "Safe Class": "판매 등급",
+    "Safe Class 1": "판매 1등급",
+    "Safe Class 2": "판매 2등급",
+    "Safe Class 3": "판매 3등급",
+    "Safe Class D": "판매 D등급",
+    "Safe Class X": "판매 X등급",
+    "Center Class": "센터 등급",
+    "Preset *corporation Good Code": "*업체상품코드",
+    "Preset Sku Code": "SKU코드",
+    "Live Preset Download": "실시간 프리셋 다운로드",
+    "Downloads": "다운로드",
+    "Email List": "이메일 리스트",
+    "Alert Emails": "알림 이메일",
+    "Is Requested Reborn": "판매 중지 취소 요청",
+    "Memo For Center": "센터 메모",
+    "Orders": "발주서",
+    "Placing Orders": "발주서",
+    "New Ct Placing Order": "발주서 만들기",
+    "Option Yn": "옵션 사용 여부",
+    "Option Name": "옵션명",
+    "Option Value": "옵션값",
+    "Option Image": "옵션이미지",
+    "Option Cost Price": "옵션매입가격",
+    "Option Price": "옵션가격",
+    "Ordered Email": "발주 이메일",
+    "Contact Name": "담당자 이름",
+    "Contact Tel": "담당자 전화",
+    "Contact Cel": "담당자 휴대폰",
+    "Order Method": "발주 방법",
+    "Balance Criteria": "정산 규칙",
+    "Min Order Price": "최소 발주 금액",
+    "Is Parceled": "택배 유무",
+    "Additional Information": "추가 정보",
+    "Good Manual Warehousings": "상품 수동 입고",
+    "Cms Maestro": "담당자",
+    "Manual Add Inventory Count": "수동으로 더해진 재고수",
+    "Bundled Goods": "묶음 상품",
+    "Featured Good List": "대표 상품(들)",
+    "Is Gift": "사은품인지?",
+    "Shorten Code": "축약 코드",
+    "Featured Good Name List": "대표 상품(들)",
+    "Manual Add Inventory Memo": "수동 입고 메모",
+    "Memo": "메모",
+    "Quantity In Box": "입수량",
+    "Box Count": "박스 수량",
+    "Box Barcode": "박스 바코드",
+    "Supplier Category": "공급사 카테고리",
+    "Min Order Count": "최소 주문 수량",
+    "Supplier Attribute": "공급사 속성",
+    "Unit Price": "단가",
+    "Customer Price": "소비자가",
+    "Edit Inventory": "재고 수정",
+    "Are you sure you want to delete # %s?": "# %s번을 정말 삭제하시겠습니까?",
+    "Supplier Goods": "공급사 상품",
+    "Supplier Id": "공급사아이디",
+    "Set Goods": "세트 상품",
+    "Option Goods": "옵션 상품",
+    "OptionGood Playauto Master Code": "옵션상품 P코드",
+    "Good Inventory Snapshots": "상품 재고 스냅샷",
+    "B2b Goods": "B2B 상품",
+    "Playauto Categories": "플레이오토 카테고리",
+    "Wemake Categories": "위메프 카테고리",
+    "Is Not Playauto Used": "플레이오토 사용 안함",
+    "Lately Shipping Created": "최근 출고 일시",
+    "Lately Receiving Created": "최근 입고 일시",
+    "Lately Manual Shipping Created": "최근 수동 출고 일시",
+    "Lately Manual Receiving Created": "최근 수동 입고 일시",
+    "Supplier Good": "공급사 상품",
+    "SupplierGood Supplier Attribute": "공급사 상품 속성",
+    "Total Shipping Quantity": "총 입고 수량",
+    "Order Quantity": "주문 수량",
+    "Size": "사이즈",
+    "Quantity": "수량",
+    "Ymd": "년월일",
+    "MemNo": "회원 번호",
+    "MemId": "회원 아이디",
+    "EntryPath": "가입 경로",
+    "MemNm": "회원 이름",
+    "GroupSno": "그룹 번호",
+    "Phone": "전화",
+    "CellPhone": "휴대폰",
+    "MaillingFl": "메일링플래그",
+    "SmsFl": "SMS플래그",
+    "RegDt": "등록일시",
+    "LastLoginDt": "마지막 로그인 일시",
+    "LoginCnt": "로그인 횟수",
+    "LastLoginDatediff": "마지막 로그인 경과일",
+    "FirstOrderRegDt": "첫주문 일시",
+    "FirstOrderDatediff": "첫주문 경과일",
+    "LastSecondOrderRegDt": "마지막 전 주문 일시",
+    "LastOrderRegDt": "마지막 주문 일시",
+    "LastOrderDatediff": "마지막 주문 경과일",
+    "LastFinishedOrderGoodDt": "마지막 구매확정 일시",
+    "LastFinishedOrderGoodCount": "주문 확인 횟수",
+    "SaleAmt": "총 주문 금액",
+    "CouponOrderCount": "쿠폰 주문 수",
+    "CouponUsedCount": "쿠폰 사용 수",
+    "LastCouponOrderDt": "마지막 쿠폰 사용일시",
+    "LastCouponOrderDatediff": "마지막 쿠폰 사용 경과일",
+    "DeliveryCouponOrderCount": "배송비쿠폰 사용 횟수",
+    "LastDeliveryCouponOrderDt": "마지막 배송비쿠폰 사용일시",
+    "LastDeliveryCouponOrderDatediff": "마지막 배송비쿠폰 사용 경과일",
+    "DownloadCouponDownloadedCount": "다운로드쿠폰 다운로드 횟수",
+    "DownloadCouponUsedCount": "다운로드쿠폰 사용 횟수",
+    "LastDownloadCouponUsedDt": "마지막 다운로드쿠폰 사용 일시",
+    "LastDownloadCouponUsedDatediff": "마지막 다운로드쿠폰 사용 경과일",
+    "SaryoCouponUsedCount": "사료쿠폰 사용 횟수",
+    "LastSaryoCouponUsedDt": "마지막 사료쿠폰 사용 일시",
+    "LastSaryoCouponUsedDatediff": "마지막 사료쿠폰 사용 경과일",
+    "SaryoSaleAmt": "사료 총 구매액",
+    "LastSecondSaryoDt": "마지막 직전 사료 구매일시",
+    "LastSecondSaryoBrand": "마지막 직전 구매 사료 브랜드",
+    "LastSaryoDt": "마지막 사료 구매일시",
+    "LastSaryoDatediff": "마지막 사료 구매경과일",
+    "LastSaryoBrand": "마지막 구매 사료 브랜드",
+    "GansikSaleAmt": "간식 총 구매액",
+    "LastSecondGansikDt": "마지막 직전 간식 구매일시",
+    "LastSecondGansikBrand": "마지막 직전 구매 간식 브랜드",
+    "LastGansikDt": "마지막 간식 구매일시",
+    "LastGansikBrand": "마지막 구매 간식 브랜드",
+    "TotalOrderCount": "총 주문 횟수",
+    "TotalOrderGoodCount": "총 상품 주문 횟수",
+    "OrderSaryoBrandList": "구매 사료 브랜드",
+    "OrderGansikBrandList": "구매 간식 브랜드",
+    "Title": "제목",
+    "Order Date": "주문 일",
+    "Add Ct Order": "발주서 만들기",
+    "New Ct Order": "발주서 만들기",
+    "Edit Ct Order": "발주서 수정하기",
+    "New Ct Smart Order": "스마트 발주서 만들기",
+    "Is Sent": "발송 여부",
+    "Is Confirmed": "확인 여부",
+    "Is Warehouse": "입고 여부",
+    "Sent": "발송일시",
+    "Confirmed": "확인일시",
+    "Warehoused": "입고일시",
+    "The ct_order has been saved.": "발주서가 저장되었습니다.",
+    "Order Sheet Invoices": "주문서 송장",
+    "New Ct Order Sheet Invoice": "주문서 송장 등록하기",
+    "Excel Filepath": "엑셀 파일경로",
+    "Invoice Filepath": "운송장 파일경로",
+    "Excel Json": "엑셀 Json",
+    "Count": "갯수",
+    "Price": "가격",
+    "Ordered": "발주시각",
+    "Order Price": "발주금액",
+    "Order Price Ea": "발주금액(ea)",
+    "Predict Warehoused": "예상입고날짜",
+    "Order Count": "발주수량",
+    "Status": "상태",
+    "Total Good Count": "총 상품 갯수",
+    "Total Order Price": "총 발주 금액",
+    "New Ct Order Good": "주문 상품 넣기",
+    "List": "목록",
+    "Placing Order": "발주",
+    "Placing Order Good Id": "발주상품아이디",
+    "Placing Order Id": "발주아이디",
+    "Placing Order Count": "발주횟수",
+    "Related Ct Order Goods": "관련 발주 상품 리스트",
+    "Delivery Price": "배송비",
+    "Box Price": "박스 가격",
+    "Box Orders": "박스 발주서",
+    "New Ct Box": "박스 추가",
+    "New Ct Box Order": "박스 발주서 만들기",
+    "Total Box Count": "총 박스 수량",
+    "Boxes": "박스",
+    "Box Order": "박스 발주",
+    "Cost Count": "매입 상품 수량",
+    "Supplier Confirmed Count": "공급사 확인 갯수",
+    "Supplier Confirmed Price": "공급사 확인 가격",
+    "Is Promotion": "프로모션 여부",
+    "Type": "타입",
+    "Supplier Good Code": "공급사 상품 코드",
+    "Inventory Adjustment": "재고 조정",
+    "Option Good": "옵션상품",
+    "Suggested Selling Price": "판매제안가",
+    "Suggested Selling Price Of Gms": "GMS판매제안가",
+    "Suggestioned Retail Price": "소비자가",
+    "Suggested Monitoring Price": "공모가",
+    "Good Code": "상품 코드",
+    "Origin": "원산지",
+    "Brand": "브랜드",
+    "Suppliers": "공급사",
+    "Box": "박스",
+    "Box Supplier": "박스 공급사",
+    "Mismatched Order Shipments": "미매칭 주문 상품들",
+    "Order Sheet Invoice": "주문서 송장",
+    "OrderNo": "주문번호",
+    "Site": "사이트",
+    "MasterGoodsCd": "플레이오토 마스터 코드",
+    "GoodsNm": "상품명",
+    "GoodsNmPartner": "제휴상품명",
+    "Option": "옵션",
+    "Option Count": "옵션수",
+    "My Shop Sale Option Count": "자사몰 판매가능 옵션수",
+    "Other Shop Sale Option Count": "타사몰 판매가능 옵션수",
+    "Fee Rate": "수수료율",
+    "Total Sale Good Count": "판매상품수",
+    "Total Sold Out Good Count": "품절상품수",
+    "Total No Sale Good Count": "판매중지상품수",
+    "SiteName": "사이트이름",
+    "SiteId": "사이트아이디",
+    "Company": "회사",
+    "Playauto Site": "플레이오토 사이트",
+    "Print Classification": "출력분류",
+    "Total Inventory": "재고",
+    "Total Inventory Amount": "재고 금액",
+    "Order Row Count": "주문 행수",
+    "Order Number Count": "주문 번호수",
+    "Mismatched Order Good Count": "미매칭 주문상품수",
+    "Order Good Count": "주문 상품 수",
+    "Cost Promotion Count": "매입 프로모션 상품 수량",
+    "Order Discount Percent": "발주 할인(%)",
+    "Is Applied Order Discount Percent": "발주 할인 적용",
+    "Is Supplier Out Of Stock": "공급사 품절",
+    "Supplier Out Of Stock Count": "공급사 품절 횟수",
+    "Supplier Out Of Stock On Datetime": "공급사 품절 등록일",
+    "Supplier Out Of Stock Off Datetime": "공급사 품절 해제일",
+    "Is Active": "운영중",
+    "Started": "시작일",
+    "Finished": "마감일",
+    "Good Playauto Master Code": "일반상품 플레이오토마스터코드",
+    "SetGood Playauto Master Code": "세트상품 플레이오토마스터코드",
+    "Count Per Type": "타입별 수량",
+    "Role": "역할",
+    "Username": "로그인아이디",
+    "Inventory Multiply Cost Price": "재고x매입가",
+    "SiteOrderNo": "판매사이트주문번호",
+    "SiteGoodsCd": "판매사이트상품코드",
+    "Total User Count": "전체회원수",
+    "Sms Received User Count": "SMS 수신자수",
+    "Newsletter Received User Count": "뉴스레터 수신자수",
+    "Daily Registered User Count": "신규회원수",
+    "Description": "설명",
+    "Issuer": "요청자",
+    "Worker": "실행 담당자",
+    "Classification": "분류",
+    "Good Classification": "상품 분류",
+    "StartedCtGoodSnapshot Inventory": "기초 수량",
+    "StartedCtGoodSnapshot Cost Price": "기초 단가",
+    "Started Stock Amount": "기초 금액",
+    "Wearing Quantity": "입고 수량",
+    "Wearing Unit Price": "입고 단가",
+    "Wearing Price": "입고 금액",
+    "Shipping Quantity": "출고 수량",
+    "Shipping Unit Price": "출고 단가",
+    "Shipping Price": "출고 금액",
+    "Other Wearing Quantity": "기타 입고 수량",
+    "Other Shipping Quantity": "기타 출고 수량",
+    "FinishedCtGoodSnapshot Inventory": "기말 수량",
+    "FinishedCtGoodSnapshot Cost Price": "기말 단가",
+    "Finished Stock Amount": "기말 금액",
+    "Naver Category": "네이버카테고리ID",
+    "Naver Productid": "네이버가격비교페이지ID",
+    "NaverProductId": "네이버가격비교페이지ID",
+    "Not Exist Naver Productid": "네이버가격비교페이지ID 존재하지 않음",
+    "NaverCategory": "네이버카테고리ID",
+    "NaverFl": "네이버쇼핑연동여부",
+    "NaverTag": "네이버 검색 태그",
+    "Naver Lowest Price Wrong": "네이버최저가잘못됨",
+    "NaverAttribute": "네이버 속성 정보",
+    "SoldOutFl": "품절 여부",
+    "StockFl": "판매 재고 여부",
+    "TotalStock": "통합 재고량",
+    "DelFl": "상품 삭제 여부",
+    "GoodsPrice": "상품가격",
+    "OptionCount": "옵션갯수",
+    "OptionFl": "옵션 사용 여부",
+    "ModDt": "수정일",
+    "Naver Flag": "네이버쇼핑 노출여부",
+    "Supplier Monitoring Price": "공급사 모니터링 가격",
+    "Supplier Monitoring Status": "공급사 모니터링 상태",
+    "Last Warehoused": "마지막 입고일",
+    "Naver Lowest Price": "네이버 최저가",
+    "Internet Lowest Price": "인터넷 최저가",
+    "Goods Price Holapetshop": "올라펫샵판매가",
+    "Requester": "요청자",
+    "Request File Url": "요청파일",
+    "Respond File Url": "결과파일",
+    "Register Good Requests": "상품등록요청",
+    "Add Ct Register Good Request": "상품등록요청하기",
+    "Edit Ct Register Good Request": "상품등록요청 수정하기",
+    "Is Warehoused": "입고가능유무",
+    "SupplierGood Good Code": "공급사상품코드",
+    "Supplier Created": "공급사생성일",
+    "Supplier Modified": "공급사수정일",
+    "Shipping Cost Price": "출고 매입가",
+    "Shipping Suggested Selling Price": "출고 판매제안가",
+    "Naver Category Name": "네이버카테고리 이름",
+    "Holapet Category Name": "올라펫카테고리 이름",
+    "Holapet Category": "올라펫카테고리",
+    "Warehouse Manager": "입고담당자",
+    "PlacingOrder Order Date": "발주일",
+    "PlacingOrder Total Good Count": "발주총상품수",
+    "PlacingOrder Total Order Price": "발주총금액",
+    "PlacingOrder Status": "발주상태",
+    "EsCategoryGood CateNm": "대표 카테고리 이름",
+    "Is Hi300": "HI300 여부",
+    "Last Order Count": "실매입개수",
+    "Last Order Price": "실매입가격",
+    "CachedEsGood GoodsPrice": "올라펫샵판매가",
+    "Supplier Monitoring Interruption": "공모가위반시공급중단",
+    "BrandCd": "브랜드코드",
+    "Brand Name": "브랜드이름",
+    "Suggested Sales Percent Margin": "제안판매마진(퍼센트)",
+    "Margin 3 Percent Price": "3%마진가",
+    "Margin 5 Percent Price": "5%마진가",
+    "Margin Zero Percent Price": "0%마진가",
+    "Suggested Selling Margin Of Gms": "GMS제안판매마진",
+    "Completed At": "검수일시",
+    "Zero Margin Price": "제로마진판매가",
+    "Order Good Type": "주문상품타입",
+    "OrderName": "주문자명",
+    "OrderPhone": "주문자전화",
+    "OrderCellPhone": "주문자휴대전화",
+    "Order Shipment Id": "주문서아이디",
+    "Good Manual Warehousing Type": "상품재고조정타입",
+    "Good Manual Warehousing Memo": "상품재고조정메모",
+    "Avatar": "아바타",
+    "Word": "단어",
+    "Help Tip": "도움말",
+    "Alert Email": "알람 이메일",
+    "Setting": "세팅",
+    "Option Good Option": "옵션 상품 옵션",
+    "Promotion Codes": "프로모션 코드",
+    "Master Code": "마스터 코드",
+    "Master Goods Cd": "마스터 상품코드",
+    "Started At": "시작일시",
+    "Finished At": "마감일시",
+    "Ordered At": "주문일시",
+    "Sent At": "발송일시",
+    "Confirmed At": "확인일시",
+    "Warehoused At": "입고일시",
+    "Predict Warehoused At": "예상입고일시",
+    "Register Option Good Request": "옵션 상품 등록 요청",
+    "Inventory History": "재고 이력",
+    "Box Inventory History": "박스 재고 이력",
+    "Placing Order Good": "발주 주문 상품",
+    "Box Manual Warehousings": "박스 수동 재고 조정",
+    "Main": "메인",
+    "List Image": "리스트 이미지",
+    "Playauto Category": "플레이오토 카테고리",
+    "Mismatched Order Shipment": "미매칭 주문 출고",
+    "Has Supplier Monitoring Price": "공급사 가격 모니터링 여부",
+    "Goods Nm": "상품명",
+    "Is Runout": "품절여부",
+    "After Quantity": "변경 후 수량",
+    "Model": "모델",
+    "Attribute": "속성",
+    "Cancel Id": "취소 ID",
+    "Is Success": "성공 유무",
+    "Order": "주문",
+    "Order No": "주문번호"
 }
