Complete files to need in `channels` table

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -162,6 +162,7 @@
     "Featured Good Name List": "대표 상품(들)",
     "Fee Rate": "수수료율",
     "File": "파일",
+    "Filepath": "파일경로",
     "Files": "파일",
     "Finished": "마감일",
     "Finished At": "마감일시",
@@ -257,6 +258,7 @@
     "Last Cost Price": "최근 매입가",
     "Last Order Count": "실매입개수",
     "Last Order Price": "실매입가격",
+    "Last Processed At": "마지막 처리시각",
     "Last Warehoused": "마지막 입고일",
     "LastCouponOrderDatediff": "마지막 쿠폰 사용 경과일",
     "LastCouponOrderDt": "마지막 쿠폰 사용일시",
