--- a/lang/ko.json
+++ b/lang/ko.json
@@ -235,6 +235,7 @@
     "Inventory Adjustment": "재고 조정",
     "Inventory History": "재고 이력",
     "Inventory Multiply Cost Price": "재고x매입가",
+    "Invoice": "송장",
     "Invoice Filepath": "운송장 파일경로",
     "Is Active": "운영중",
     "Is Applied Order Discount Percent": "발주 할인 적용",
@@ -339,6 +340,7 @@
     "My Shop Sale Option Count": "자사몰 판매가능 옵션수",
     "Name": "이름",
     "name": "이름",
+    "Naver Categories": "네이버 카테고리",
     "Naver Category": "네이버카테고리ID",
     "Naver Category Name": "네이버카테고리 이름",
     "Naver Flag": "네이버쇼핑 노출여부",
@@ -415,7 +417,9 @@
     "Order Rule": "주문 규칙",
     "Order Sheet Invoice": "주문서 송장",
     "Order Sheet Invoices": "주문서 송장",
+    "Order Shipment": "주문/출고",
     "Order Shipment Id": "주문서아이디",
+    "Order Shipments": "주문/출고",
     "OrderCellPhone": "주문자휴대전화",
     "Ordered": "발주시각",
     "Ordered At": "주문일시",
@@ -467,6 +471,7 @@
     "Previous": "이전",
     "Price": "가격",
     "Print Classification": "출력분류",
+    "Printed Count": "출력된 수",
     "Processing": "처리",
     "Profile": "프로필",
     "Profile Information": "프로필 정보",
@@ -674,5 +679,15 @@
     "You are receiving this email because we received a password reset request for your account.": "귀하의 계정에 대한 비밀번호 재설정이 요청되어 이 메일이 발송되었습니다.",
     "You're logged in!": "로그인되었습니다!",
     "Your email address is unverified.": "이메일 주소가 확인되지 않았습니다.",
-    "Zero Margin Price": "제로마진판매가"
+    "Zero Margin Price": "제로마진판매가",
+    "Price Coefficients": "가격 계수",
+    "Price Coefficient": "가격 계수",
+    "Start Price": "시작 가격",
+    "End Price": "끝 가격",
+    "Coefficient": "계수",
+    "Author": "작성자",
+    "Shutdown Goods": "상품 셧다운",
+    "Reason": "사유",
+    "Supplier Good Manual Warehousings": "공급사 상품 수동 입고",
+    "Supplier Good Manual Warehousing": "공급사 상품 수동 입고"
 }
