Update localized words

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -189,9 +189,11 @@
     "Good": "상품",
     "Good Classification": "상품 분류",
     "Good Code": "상품 코드",
+    "Good Inventory Snapshot": "상품 재고 스냅샷",
     "Good Inventory Snapshots": "상품 재고 스냅샷",
     "Good Manual Warehousing Memo": "상품재고조정메모",
     "Good Manual Warehousing Type": "상품재고조정타입",
+    "Good Manual Warehousing": "상품 수동 입고",
     "Good Manual Warehousings": "상품 수동 입고",
     "Good Playauto Master Code": "일반상품 플레이오토마스터코드",
     "Goods": "상품 리스트",
@@ -401,7 +403,6 @@
     "OptionCount": "옵션갯수",
     "OptionFl": "옵션 사용 여부",
     "OptionGood Playauto Master Code": "옵션상품 P코드",
-    "Order": "주문",
     "Order Count": "발주수량",
     "Order Date": "주문 일",
     "Order Discount Percent": "발주 할인(%)",
@@ -428,7 +429,6 @@
     "OrderName": "주문자명",
     "OrderNo": "주문번호",
     "OrderPhone": "주문자전화",
-    "Orders": "발주서",
     "OrderSaryoBrandList": "구매 사료 브랜드",
     "Origin": "원산지",
     "Origin Is Unreachable": "원본에 연결할 수 없음",
@@ -689,5 +689,52 @@
     "Shutdown Goods": "상품 셧다운",
     "Reason": "사유",
     "Supplier Good Manual Warehousings": "공급사 상품 수동 입고",
-    "Supplier Good Manual Warehousing": "공급사 상품 수동 입고"
+    "Supplier Good Manual Warehousing": "공급사 상품 수동 입고",
+    "Channel": "채널",
+    "Channels": "채널",
+    "Channel Fees": "채널 수수료",
+    "Channel Fee": "채널 수수료",
+    "Playauto": "플레이오토",
+    "Tools": "도구",
+    "Orders": "주문",
+    "Order": "주문",
+    "Regist Date": "등록일",
+    "Payment Date": "결제일",
+    "Delivery Date": "배송일",
+    "Status Date": "상태일",
+    "Site Order No": "사이트 주문번호",
+    "Additional Option": "추가옵션",
+    "Additional Option Price": "추가옵션가격",
+    "Total Price": "전체가격",
+    "Amount": "수량",
+    "Total Amount": "전체수량",
+    "Confirm Amount": "확인수량",
+    "Delivery Type": "배송방법",
+    "Total Delivery Price": "전체배송금액",
+    "Order Name": "주문 이름",
+    "Order Phone": "주문 전화",
+    "Order Cell Phone": "주문 휴대폰",
+    "Receiver Name": "수령인 이름",
+    "Receiver Phone": "수령인 전화",
+    "Receiver Cell Phone": "수령인 휴대폰",
+    "Postcode": "우편번호",
+    "Address": "주소",
+    "Delivery Memo": "배송메모",
+    "Invoice Company": "송장 회사",
+    "Invoice No": "송장번호",
+    "Invoice File Path": "송장파일경로",
+    "Invoice File Age": "송장파일나이",
+    "Invoice Goods Cd": "송장상품코드",
+    "Pay Goods Cd": "지불상품코드",
+    "Validator": "검수인",
+    "Is Set": "세트상품여부",
+    "Printed": "프린트여부",
+    "Downloaded": "다운로드여부",
+    "Shipped": "배송여부",
+    "Shippable": "배송가능",
+    "Printed At": "프린트일시",
+    "Downloaded At": "다운로드일시",
+    "Shipped At": "배송일시",
+    "Site Goods Cd": "사이트 상품코드",
+    "Playauto Goods": "플레이오토 상품"
 }
