Add localized a word

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -738,5 +738,6 @@
     "Site Goods Cd": "사이트 상품코드",
     "Playauto Goods": "플레이오토 상품",
     "Timezone": "타임존",
-    "Basic Good": "기본 상품"
+    "Basic Good": "기본 상품",
+    "Action Name": "액션 이름"
 }
