Update localized words

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -739,5 +739,8 @@
     "Playauto Goods": "플레이오토 상품",
     "Timezone": "타임존",
     "Basic Good": "기본 상품",
-    "Action Name": "액션 이름"
+    "Action Name": "액션 이름",
+    "Dashboards": "대시보드",
+    "My Profile": "프로필",
+    "Helpful Links": "도움되는 사이트"
 }
