Add barcode command

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -1,6 +1,7 @@
 {
     "(and :count more error)": "(그리고 :count개 이상의 오류)",
     "(and :count more errors)": "(그리고 :count개 이상의 오류)|(그리고 :count개 이상의 오류)|(그리고 :count개 이상의 오류)",
+    "365 Days": "365 일",
     "A decryption key is required.": "복호화 키가 필요합니다.",
     "A fresh verification link has been sent to your email address.": "새로운 인증 링크를 이메일로 보냈습니다.",
     "A new verification link has been sent to the email address you provided during registration.": "새로운 확인 링크를 가입할 때 사용한 이메일 주소로 보냈습니다.",
@@ -9,6 +10,7 @@
     "Accept": "수용하다",
     "Accepted": "수락됨",
     "Action": "액션",
+    "Action Name": "액션 이름",
     "Actions": "액션들",
     "Add": "추가",
     "Add :name": ":name을 더하다",
@@ -17,6 +19,9 @@
     "Add Ct Register Good Request": "상품등록요청하기",
     "Add Go User": "고 유저 만들기",
     "Additional Information": "추가 정보",
+    "Additional Option": "추가옵션",
+    "Additional Option Price": "추가옵션가격",
+    "Address": "주소",
     "Admin": "관리자",
     "After Quantity": "변경 후 수량",
     "Agree": "동의하다",
@@ -25,6 +30,7 @@
     "All rights reserved.": "모든 권리 보유.",
     "Already registered?": "계정이 있으신가요?",
     "Already Reported": "이미 보고됨",
+    "Amount": "수량",
     "Archive": "보관소",
     "Are you sure you want to delete # %s?": "# %s번을 정말 삭제하시겠습니까?",
     "Are you sure you want to delete your account?": "계정을 삭제하시겠습니까?",
@@ -32,6 +38,7 @@
     "Associate": "연관짓다",
     "Attach": "첨부",
     "Attribute": "속성",
+    "Author": "작성자",
     "Avatar": "아바타",
     "B2b Goods": "B2B 상품",
     "Bad Gateway": "잘못된 게이트웨이",
@@ -40,6 +47,7 @@
     "Bandwidth Limit Exceeded": "대역폭 제한 초과",
     "Barcode": "바코드",
     "Barcode Test": "바코드 테스트",
+    "Basic Good": "기본 상품",
     "Before proceeding, please check your email for a verification link.": "진행하기 전에 이메일에 인증 링크를 확인하십시오.",
     "Box": "박스",
     "Box Barcode": "박스 바코드",
@@ -64,6 +72,10 @@
     "CellPhone": "휴대폰",
     "Center Class": "센터 등급",
     "Center Code": "센터 코드",
+    "Channel": "채널",
+    "Channel Fee": "채널 수수료",
+    "Channel Fees": "채널 수수료",
+    "Channels": "채널",
     "Choose": "선택",
     "Choose :name": ":name개를 선택하세요",
     "Choose File": "파일 선택",
@@ -76,12 +88,14 @@
     "Close": "닫기",
     "Cms Maestro": "담당자",
     "Code": "코드",
+    "Coefficient": "계수",
     "Collapse": "무너지다",
     "Collapse All": "모든 축소",
     "Comment": "논평",
     "Company": "회사",
     "Completed At": "검수일시",
     "Confirm": "확인",
+    "Confirm Amount": "확인수량",
     "Confirm Password": "비밀번호 확인",
     "Confirmed": "확인일시",
     "Confirmed At": "확인일시",
@@ -110,11 +124,15 @@
     "Customer Price": "소비자가",
     "Daily Registered User Count": "신규회원수",
     "Dashboard": "대시보드",
+    "Dashboards": "대시보드",
     "Delete": "삭제",
     "Delete :name": ":name 삭제",
     "Delete Account": "계정 삭제",
     "DelFl": "상품 삭제 여부",
+    "Delivery Date": "배송일",
+    "Delivery Memo": "배송메모",
     "Delivery Price": "배송비",
+    "Delivery Type": "배송방법",
     "DeliveryCouponOrderCount": "배송비쿠폰 사용 횟수",
     "Description": "설명",
     "Detach": "분리",
@@ -126,6 +144,8 @@
     "Down": "아래에",
     "DownloadCouponDownloadedCount": "다운로드쿠폰 다운로드 횟수",
     "DownloadCouponUsedCount": "다운로드쿠폰 사용 횟수",
+    "Downloaded": "다운로드여부",
+    "Downloaded At": "다운로드일시",
     "Downloads": "다운로드",
     "Duplicate": "복제하다",
     "Duplicate :name": "중복: 이름",
@@ -143,6 +163,7 @@
     "Encrypted environment file already exists.": "암호화된 환경 파일이 이미 존재합니다.",
     "Encrypted environment file not found.": "암호화된 환경 파일을 찾을 수 없습니다.",
     "End Date": "마감 시각",
+    "End Price": "끝 가격",
     "Ensure your account is using a long, random password to stay secure.": "계정을 안전하게 지키기 위해 길고 랜덤한 암호를 사용하고 있는지 확인하세요.",
     "EntryPath": "가입 경로",
     "Environment file already exists.": "환경 파일이 이미 존재합니다.",
@@ -191,10 +212,11 @@
     "Good Code": "상품 코드",
     "Good Inventory Snapshot": "상품 재고 스냅샷",
     "Good Inventory Snapshots": "상품 재고 스냅샷",
+    "Good Manual Warehousing": "상품 수동 재고 조정",
     "Good Manual Warehousing Memo": "상품재고조정메모",
     "Good Manual Warehousing Type": "상품재고조정타입",
-    "Good Manual Warehousing": "상품 수동 재고 조정",
     "Good Manual Warehousings": "상품 수동 재고 조정",
+    "Good Per Day": "일별 상품",
     "Good Playauto Master Code": "일반상품 플레이오토마스터코드",
     "Goods": "상품 리스트",
     "Goods Division Color": "상품 구분색",
@@ -208,6 +230,7 @@
     "Has Supplier Monitoring Price": "공급사 가격 모니터링 여부",
     "Hello!": "안녕하세요!",
     "Help Tip": "도움말",
+    "Helpful Links": "도움되는 사이트",
     "Hide": "숨다",
     "Hide :name": ":name 숨기기",
     "Holapet Category": "올라펫카테고리",
@@ -238,7 +261,12 @@
     "Inventory History": "재고 이력",
     "Inventory Multiply Cost Price": "재고x매입가",
     "Invoice": "송장",
+    "Invoice Company": "송장 회사",
+    "Invoice File Age": "송장파일나이",
+    "Invoice File Path": "송장파일경로",
     "Invoice Filepath": "운송장 파일경로",
+    "Invoice Goods Cd": "송장상품코드",
+    "Invoice No": "송장번호",
     "Is Active": "운영중",
     "Is Applied Order Discount Percent": "발주 할인 적용",
     "Is Confirmed": "확인 여부",
@@ -252,6 +280,7 @@
     "Is Requested Shutdown": "판매중지 요청",
     "Is Runout": "품절여부",
     "Is Sent": "발송 여부",
+    "Is Set": "세트상품여부",
     "Is Shutdown": "판매중지 여부",
     "Is Success": "성공 유무",
     "Is Supplier Out Of Stock": "공급사 품절",
@@ -339,6 +368,7 @@
     "Moved Permanently": "영구 이사",
     "Multi-Status": "다중 상태",
     "Multiple Choices": "객관식",
+    "My Profile": "프로필",
     "My Shop Sale Option Count": "자사몰 판매가능 옵션수",
     "Name": "이름",
     "name": "이름",
@@ -403,14 +433,18 @@
     "OptionCount": "옵션갯수",
     "OptionFl": "옵션 사용 여부",
     "OptionGood Playauto Master Code": "옵션상품 P코드",
+    "Order": "주문",
+    "Order Cell Phone": "주문 휴대폰",
     "Order Count": "발주수량",
     "Order Date": "주문 일",
     "Order Discount Percent": "발주 할인(%)",
     "Order Good Count": "주문 상품 수",
     "Order Good Type": "주문상품타입",
     "Order Method": "발주 방법",
+    "Order Name": "주문 이름",
     "Order No": "주문번호",
     "Order Number Count": "주문 번호수",
+    "Order Phone": "주문 전화",
     "Order Price": "발주금액",
     "Order Price Ea": "발주금액(ea)",
     "Order Quantity": "주문 수량",
@@ -420,6 +454,7 @@
     "Order Sheet Invoices": "주문서 송장",
     "Order Shipment": "주문/출고",
     "Order Shipment Id": "주문서아이디",
+    "Order Shipment Per Day": "일별 주문서",
     "Order Shipments": "주문/출고",
     "OrderCellPhone": "주문자휴대전화",
     "Ordered": "발주시각",
@@ -429,6 +464,7 @@
     "OrderName": "주문자명",
     "OrderNo": "주문번호",
     "OrderPhone": "주문자전화",
+    "Orders": "주문",
     "OrderSaryoBrandList": "구매 사료 브랜드",
     "Origin": "원산지",
     "Origin Is Unreachable": "원본에 연결할 수 없음",
@@ -440,7 +476,9 @@
     "Partial Content": "부분 콘텐츠",
     "Password": "비밀번호",
     "password": "비밀번호가 잘못되었습니다.",
+    "Pay Goods Cd": "지불상품코드",
     "Payload Too Large": "페이로드가 너무 큼",
+    "Payment Date": "결제일",
     "Payment Required": "결제 필요",
     "Permanent Redirect": "영구 리디렉션",
     "Phone": "전화",
@@ -449,18 +487,22 @@
     "Placing Order Count": "발주횟수",
     "Placing Order Good": "발주 상품",
     "Placing Order Good Id": "발주상품아이디",
+    "Placing Order Good Per Day": "일별 발주상품",
     "Placing Order Id": "발주아이디",
     "Placing Orders": "발주서",
     "PlacingOrder Order Date": "발주일",
     "PlacingOrder Status": "발주상태",
     "PlacingOrder Total Good Count": "발주총상품수",
     "PlacingOrder Total Order Price": "발주총금액",
+    "Playauto": "플레이오토",
     "Playauto Categories": "플레이오토 카테고리",
     "Playauto Category": "플레이오토 카테고리",
+    "Playauto Goods": "플레이오토 상품",
     "Playauto Master Code": "P코드",
     "Playauto Site": "플레이오토 사이트",
     "Please click the button below to verify your email address.": "이메일 주소를 확인하려면 아래 버튼을 클릭하십시오.",
     "Please confirm your password before continuing.": "계속하기 전에 패스워드를 입력해주세요.",
+    "Postcode": "우편번호",
     "Precondition Failed": "전제 조건 실패",
     "Precondition Required": "전제 조건 필요",
     "Predict Warehoused": "예상입고날짜",
@@ -470,7 +512,11 @@
     "Preview": "프리뷰",
     "Previous": "이전",
     "Price": "가격",
+    "Price Coefficient": "가격 계수",
+    "Price Coefficients": "가격 계수",
     "Print Classification": "출력분류",
+    "Printed": "프린트여부",
+    "Printed At": "프린트일시",
     "Printed Count": "출력된 수",
     "Processing": "처리",
     "Profile": "프로필",
@@ -481,9 +527,14 @@
     "Quantity In Box": "입수량",
     "Railgun Error": "레일건 오류",
     "Range Not Satisfiable": "범위가 만족스럽지 않음",
+    "Reason": "사유",
+    "Receiver Cell Phone": "수령인 휴대폰",
+    "Receiver Name": "수령인 이름",
+    "Receiver Phone": "수령인 전화",
     "Record": "기록",
     "Regards,": "안부,",
     "RegDt": "등록일시",
+    "Regist Date": "등록일",
     "Register": "회원가입",
     "Register Good Requests": "상품등록요청",
     "Register Option Good Request": "옵션 상품 등록 요청",
@@ -512,6 +563,9 @@
     "Safe Class D": "판매 D등급",
     "Safe Class X": "판매 X등급",
     "Safe Inventory": "안전 재고",
+    "Sale Count Per Day": "일별 판매갯수",
+    "Sale Price Per Day": "일별 판매금액",
+    "Sale Price Per Site": "사이트별 판매금액",
     "SaleAmt": "총 주문 금액",
     "SaryoCouponUsedCount": "사료쿠폰 사용 횟수",
     "SaryoSaleAmt": "사료 총 구매액",
@@ -537,6 +591,9 @@
     "Setting": "세팅",
     "Settings": "설정",
     "Ship Quantity": "배송 수량(주문 단위)",
+    "Shippable": "배송가능",
+    "Shipped": "배송여부",
+    "Shipped At": "배송일시",
     "Shipping Cost Price": "출고 매입가",
     "Shipping Price": "출고 금액",
     "Shipping Quantity": "출고 수량",
@@ -547,8 +604,11 @@
     "Show :name": "쇼 :name",
     "Show All": "모두 보이기",
     "Showing": "보기",
+    "Shutdown Goods": "상품 셧다운",
     "Sign In": "로그인",
     "Site": "사이트",
+    "Site Goods Cd": "사이트 상품코드",
+    "Site Order No": "사이트 주문번호",
     "SiteGoodsCd": "판매사이트상품코드",
     "SiteId": "사이트아이디",
     "SiteName": "사이트이름",
@@ -562,12 +622,14 @@
     "SSL Handshake Failed": "SSL 핸드셰이크 실패",
     "Start": "시작",
     "Start Date": "시작 시각",
+    "Start Price": "시작 가격",
     "Started": "시작일",
     "Started At": "시작일시",
     "Started Stock Amount": "기초 금액",
     "StartedCtGoodSnapshot Cost Price": "기초 단가",
     "StartedCtGoodSnapshot Inventory": "기초 수량",
     "Status": "상태",
+    "Status Date": "상태일",
     "StockFl": "판매 재고 여부",
     "Stop": "멈추다",
     "Storage Box Zone": "스토리지 박스존",
@@ -587,6 +649,8 @@
     "Supplier Created": "공급사생성일",
     "Supplier Good": "공급사 상품",
     "Supplier Good Code": "공급사 상품 코드",
+    "Supplier Good Manual Warehousing": "공급사 상품 수동 입고",
+    "Supplier Good Manual Warehousings": "공급사 상품 수동 입고",
     "Supplier Goods": "공급사 상품",
     "Supplier Id": "공급사아이디",
     "Supplier Modified": "공급사수정일",
@@ -616,18 +680,28 @@
     "This action is unauthorized.": "이 작업은 승인되지 않았습니다.",
     "This is a secure area of the application. Please confirm your password before continuing.": "이곳은 보안 구역입니다. 진행하기 위해서 비밀번호를 입력해주세요.",
     "This password reset link will expire in :count minutes.": "이 비밀번호 재설정 링크는 :count분 후에 만료됩니다.",
+    "Timezone": "타임존",
     "Title": "제목",
     "to": "에",
     "Toggle navigation": "내비게이션 전환",
     "Too Early": "너무 이른",
     "Too Many Requests": "너무 많은 요청",
+    "Tools": "도구",
+    "Total Amount": "전체수량",
     "Total Box Count": "총 박스 수량",
+    "Total Delivery Price": "전체배송금액",
+    "Total Good": "총 상품",
     "Total Good Count": "총 상품 갯수",
     "Total Inventory": "재고",
     "Total Inventory Amount": "재고 금액",
     "Total No Sale Good Count": "판매중지상품수",
     "Total Order Price": "총 발주 금액",
+    "Total Order Shipment": "총 주문서",
+    "Total Placing Order Good": "총 발주상품",
+    "Total Price": "전체가격",
+    "Total Sale Count": "총 판매갯수",
     "Total Sale Good Count": "판매상품수",
+    "Total Sale Price": "총 판매금액",
     "Total Shipping Quantity": "총 입고 수량",
     "Total Sold Out Good Count": "품절상품수",
     "Total User Count": "전체회원수",
@@ -657,6 +731,7 @@
     "Use Proxy": "프록시 사용",
     "User": "사용자",
     "Username": "로그인아이디",
+    "Validator": "검수인",
     "Variant Also Negotiates": "변형도 협상",
     "Verify Email Address": "이메일 주소 확인",
     "Verify Your Email Address": "이메일 주소 확인",
@@ -679,80 +754,5 @@
     "You are receiving this email because we received a password reset request for your account.": "귀하의 계정에 대한 비밀번호 재설정이 요청되어 이 메일이 발송되었습니다.",
     "You're logged in!": "로그인되었습니다!",
     "Your email address is unverified.": "이메일 주소가 확인되지 않았습니다.",
-    "Zero Margin Price": "제로마진판매가",
-    "Price Coefficients": "가격 계수",
-    "Price Coefficient": "가격 계수",
-    "Start Price": "시작 가격",
-    "End Price": "끝 가격",
-    "Coefficient": "계수",
-    "Author": "작성자",
-    "Shutdown Goods": "상품 셧다운",
-    "Reason": "사유",
-    "Supplier Good Manual Warehousings": "공급사 상품 수동 입고",
-    "Supplier Good Manual Warehousing": "공급사 상품 수동 입고",
-    "Channel": "채널",
-    "Channels": "채널",
-    "Channel Fees": "채널 수수료",
-    "Channel Fee": "채널 수수료",
-    "Playauto": "플레이오토",
-    "Tools": "도구",
-    "Orders": "주문",
-    "Order": "주문",
-    "Regist Date": "등록일",
-    "Payment Date": "결제일",
-    "Delivery Date": "배송일",
-    "Status Date": "상태일",
-    "Site Order No": "사이트 주문번호",
-    "Additional Option": "추가옵션",
-    "Additional Option Price": "추가옵션가격",
-    "Total Price": "전체가격",
-    "Amount": "수량",
-    "Total Amount": "전체수량",
-    "Confirm Amount": "확인수량",
-    "Delivery Type": "배송방법",
-    "Total Delivery Price": "전체배송금액",
-    "Order Name": "주문 이름",
-    "Order Phone": "주문 전화",
-    "Order Cell Phone": "주문 휴대폰",
-    "Receiver Name": "수령인 이름",
-    "Receiver Phone": "수령인 전화",
-    "Receiver Cell Phone": "수령인 휴대폰",
-    "Postcode": "우편번호",
-    "Address": "주소",
-    "Delivery Memo": "배송메모",
-    "Invoice Company": "송장 회사",
-    "Invoice No": "송장번호",
-    "Invoice File Path": "송장파일경로",
-    "Invoice File Age": "송장파일나이",
-    "Invoice Goods Cd": "송장상품코드",
-    "Pay Goods Cd": "지불상품코드",
-    "Validator": "검수인",
-    "Is Set": "세트상품여부",
-    "Printed": "프린트여부",
-    "Downloaded": "다운로드여부",
-    "Shipped": "배송여부",
-    "Shippable": "배송가능",
-    "Printed At": "프린트일시",
-    "Downloaded At": "다운로드일시",
-    "Shipped At": "배송일시",
-    "Site Goods Cd": "사이트 상품코드",
-    "Playauto Goods": "플레이오토 상품",
-    "Timezone": "타임존",
-    "Basic Good": "기본 상품",
-    "Action Name": "액션 이름",
-    "Dashboards": "대시보드",
-    "My Profile": "프로필",
-    "Helpful Links": "도움되는 사이트",
-    "365 Days": "365 일",
-    "Total Order Shipment": "총 주문서",
-    "Order Shipment Per Day": "일별 주문서",
-    "Total Placing Order Good": "총 발주상품",
-    "Placing Order Good Per Day": "일별 발주상품",
-    "Total Good": "총 상품",
-    "Good Per Day": "일별 상품",
-    "Sale Price Per Day": "일별 판매금액",
-    "Total Sale Price": "총 판매금액",
-    "Total Sale Count": "총 판매갯수",
-    "Sale Count Per Day": "일별 판매갯수",
-    "Sale Price Per Site": "사이트별 판매금액"
+    "Zero Margin Price": "제로마진판매가"
 }
