Add Nova resource for barcode commands

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -46,6 +46,7 @@
     "Balance Criteria": "정산 규칙",
     "Bandwidth Limit Exceeded": "대역폭 제한 초과",
     "Barcode": "바코드",
+    "Barcode Image": "바코드 이미지",
     "Barcode Test": "바코드 테스트",
     "Basic Good": "기본 상품",
     "Before proceeding, please check your email for a verification link.": "진행하기 전에 이메일에 인증 링크를 확인하십시오.",
