Add the function of printing barcode commands for paper

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -46,6 +46,7 @@
     "Balance Criteria": "정산 규칙",
     "Bandwidth Limit Exceeded": "대역폭 제한 초과",
     "Barcode": "바코드",
+    "Barcode Commands": "바코드 커맨드",
     "Barcode Image": "바코드 이미지",
     "Barcode Test": "바코드 테스트",
     "Basic Good": "기본 상품",
