Being able to upload for `OrderSheetInvoice` resource

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -185,6 +185,7 @@
     "Featured Good Name List": "대표 상품(들)",
     "Fee Rate": "수수료율",
     "File": "파일",
+    "File Sizes": "파일 크기",
     "Filepath": "파일경로",
     "Files": "파일",
     "Finished": "마감일",
@@ -264,8 +265,11 @@
     "Inventory Multiply Cost Price": "재고x매입가",
     "Invoice": "송장",
     "Invoice Company": "송장 회사",
+    "Invoice File": "운송장 파일",
     "Invoice File Age": "송장파일나이",
+    "Invoice File Name": "운송장 파일 이름",
     "Invoice File Path": "송장파일경로",
+    "Invoice File Size": "운송장 파일 크기",
     "Invoice Filepath": "운송장 파일경로",
     "Invoice Goods Cd": "송장상품코드",
     "Invoice No": "송장번호",
@@ -452,6 +456,9 @@
     "Order Quantity": "주문 수량",
     "Order Row Count": "주문 행수",
     "Order Rule": "주문 규칙",
+    "Order Sheet File": "주문서 파일",
+    "Order Sheet File Name": "주문서 파일 이름",
+    "Order Sheet File Size": "주문서 파일 크기",
     "Order Sheet Invoice": "주문서 송장",
     "Order Sheet Invoices": "주문서 송장",
     "Order Shipment": "주문/출고",
