Replace `orders.type` to `PickingZone` table

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -492,6 +492,8 @@
     "Permanent Redirect": "영구 리디렉션",
     "Phone": "전화",
     "Picking Box Number": "피킹박스 번호",
+    "Picking Zone": "피킹존",
+    "Picking Zones": "피킹존",
     "Placing Order": "발주",
     "Placing Order Count": "발주횟수",
     "Placing Order Good": "발주 상품",
