Fix `orders.type` correctly

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -449,6 +449,7 @@
     "Order Method": "발주 방법",
     "Order Name": "주문 이름",
     "Order No": "주문번호",
+    "Order Number": "주문번호",
     "Order Number Count": "주문 번호수",
     "Order Phone": "주문 전화",
     "Order Price": "발주금액",
