--- a/lang/ko.json
+++ b/lang/ko.json
@@ -193,7 +193,6 @@
     "Finished Stock Amount": "기말 금액",
     "FinishedCtGoodSnapshot Cost Price": "기말 단가",
     "FinishedCtGoodSnapshot Inventory": "기말 수량",
-    "FirstOrderDatediff": "첫주문 경과일",
     "FirstOrderRegDt": "첫주문 일시",
     "Fixed Price": "원가",
     "FixedPrice": "원가",
@@ -242,6 +241,7 @@
     "HTTP Version Not Supported": "지원되지 않는 HTTP 버전",
     "I'm a teapot": "나는 찻주전자",
     "Id": "아이디",
+    "If you are in Korea, select \"Asia/Seoul\".": "한국이라면 \"Asia/Seoul\" 을 선택하세요.",
     "If you did not create an account, no further action is required.": "계정을 생성하지 않았다면 추가 조치가 필요하지 않습니다.",
     "If you did not receive the email": "이메일을 받지 못하셨다면",
     "If you did not request a password reset, no further action is required.": "귀하께서 비밀번호 재설정을 요청하지 않으셨다면, 추가 조치가 필요하지 않습니다.",
@@ -274,6 +274,7 @@
     "Invoice Goods Cd": "송장상품코드",
     "Invoice No": "송장번호",
     "Is Active": "운영중",
+    "Is All Good Matched": "모든 상품 매칭 여부",
     "Is Applied Order Discount Percent": "발주 할인 적용",
     "Is Confirmed": "확인 여부",
     "Is Gift": "사은품인지?",
@@ -298,30 +299,12 @@
     "Last Order Price": "실매입가격",
     "Last Processed At": "마지막 처리시각",
     "Last Warehoused": "마지막 입고일",
-    "LastCouponOrderDatediff": "마지막 쿠폰 사용 경과일",
     "LastCouponOrderDt": "마지막 쿠폰 사용일시",
-    "LastDeliveryCouponOrderDatediff": "마지막 배송비쿠폰 사용 경과일",
     "LastDeliveryCouponOrderDt": "마지막 배송비쿠폰 사용일시",
-    "LastDownloadCouponUsedDatediff": "마지막 다운로드쿠폰 사용 경과일",
     "LastDownloadCouponUsedDt": "마지막 다운로드쿠폰 사용 일시",
     "LastFinishedOrderGoodCount": "주문 확인 횟수",
     "LastFinishedOrderGoodDt": "마지막 구매확정 일시",
-    "LastGansikBrand": "마지막 구매 간식 브랜드",
-    "LastGansikDt": "마지막 간식 구매일시",
-    "LastLoginDatediff": "마지막 로그인 경과일",
     "LastLoginDt": "마지막 로그인 일시",
-    "LastOrderDatediff": "마지막 주문 경과일",
-    "LastOrderRegDt": "마지막 주문 일시",
-    "LastSaryoBrand": "마지막 구매 사료 브랜드",
-    "LastSaryoCouponUsedDatediff": "마지막 사료쿠폰 사용 경과일",
-    "LastSaryoCouponUsedDt": "마지막 사료쿠폰 사용 일시",
-    "LastSaryoDatediff": "마지막 사료 구매경과일",
-    "LastSaryoDt": "마지막 사료 구매일시",
-    "LastSecondGansikBrand": "마지막 직전 구매 간식 브랜드",
-    "LastSecondGansikDt": "마지막 직전 간식 구매일시",
-    "LastSecondOrderRegDt": "마지막 전 주문 일시",
-    "LastSecondSaryoBrand": "마지막 직전 구매 사료 브랜드",
-    "LastSecondSaryoDt": "마지막 직전 사료 구매일시",
     "Lately Manual Receiving Created": "최근 수동 입고 일시",
     "Lately Manual Shipping Created": "최근 수동 출고 일시",
     "Lately Receiving Created": "최근 입고 일시",
@@ -344,7 +327,6 @@
     "LoginCnt": "로그인 횟수",
     "Logout": "로그아웃",
     "Loop Detected": "루프 감지됨",
-    "MaillingFl": "메일링플래그",
     "Main": "메인",
     "Maintenance Mode": "유지 관리 모드",
     "Maker": "제조사",
@@ -441,10 +423,11 @@
     "OptionGood Playauto Master Code": "옵션상품 P코드",
     "Order": "주문",
     "Order Cell Phone": "주문 휴대폰",
-    "Order Count": "발주수량",
+    "Order Count": "주문수",
     "Order Date": "주문 일",
     "Order Discount Percent": "발주 할인(%)",
-    "Order Good Count": "주문 상품 수",
+    "Order From Order Sheet Invoice": "주문서 송장에서 주문 추출",
+    "Order Good Count": "주문상품수",
     "Order Good Type": "주문상품타입",
     "Order Method": "발주 방법",
     "Order Name": "주문 이름",
@@ -470,12 +453,10 @@
     "Ordered": "발주시각",
     "Ordered At": "주문일시",
     "Ordered Email": "발주 이메일",
-    "OrderGansikBrandList": "구매 간식 브랜드",
     "OrderName": "주문자명",
     "OrderNo": "주문번호",
     "OrderPhone": "주문자전화",
     "Orders": "주문",
-    "OrderSaryoBrandList": "구매 사료 브랜드",
     "Origin": "원산지",
     "Origin Is Unreachable": "원본에 연결할 수 없음",
     "Other Shipping Quantity": "기타 출고 수량",
@@ -568,6 +549,7 @@
     "Retail Code": "리테일 코드",
     "Retry With": "재시도",
     "Role": "역할",
+    "Row Count": "행수",
     "Safe Class": "판매 등급",
     "Safe Class 1": "판매 1등급",
     "Safe Class 2": "판매 2등급",
@@ -579,8 +561,6 @@
     "Sale Price Per Day": "일별 판매금액",
     "Sale Price Per Site": "사이트별 판매금액",
     "SaleAmt": "총 주문 금액",
-    "SaryoCouponUsedCount": "사료쿠폰 사용 횟수",
-    "SaryoSaleAmt": "사료 총 구매액",
     "Save": "저장",
     "Save & Close": "저장 후 닫기",
     "Save & Return": "저장 및 돌아가기",
