--- a/lang/ko.json
+++ b/lang/ko.json
@@ -74,6 +74,7 @@
     "CellPhone": "휴대폰",
     "Center Class": "센터 등급",
     "Center Code": "센터 코드",
+    "Change Password": "비밀번호 변경",
     "Channel": "채널",
     "Channel Fee": "채널 수수료",
     "Channel Fees": "채널 수수료",
@@ -241,6 +242,7 @@
     "HTTP Version Not Supported": "지원되지 않는 HTTP 버전",
     "I'm a teapot": "나는 찻주전자",
     "Id": "아이디",
+    "If you are in Korea, select \"Asia/Seoul\".": "한국에 거주하시는 경우 \"Asia/Seoul\"을 선택하세요.",
     "If you did not create an account, no further action is required.": "계정을 생성하지 않았다면 추가 조치가 필요하지 않습니다.",
     "If you did not receive the email": "이메일을 받지 못하셨다면",
     "If you did not request a password reset, no further action is required.": "귀하께서 비밀번호 재설정을 요청하지 않으셨다면, 추가 조치가 필요하지 않습니다.",
@@ -478,6 +480,7 @@
     "Partial Content": "부분 콘텐츠",
     "Password": "비밀번호",
     "password": "비밀번호가 잘못되었습니다.",
+    "Password Confirmation": "비밀번호 확인",
     "Pay Goods Cd": "지불상품코드",
     "Payload Too Large": "페이로드가 너무 큼",
     "Payment Date": "결제일",
